syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message Category {
  Entity Entity = 1;
  string name = 2;
}

message CategoryListRequest {
  Category payload = 1;
  Metadata metadata = 2;
}

message CategoryResponse {
  Category response = 1;
}

message CategoryListResponse {
  repeated Category response = 1;
}

service CategoryService {
  rpc Create(Category) returns (CategoryResponse);
  rpc Update(Category) returns (CategoryResponse);
  rpc FindAll(CategoryListRequest) returns (CategoryListResponse);
  rpc Count(Category) returns (CountResponse);
}
